options(CRAN=c(some_cran_mirror, http://www.stats.ox.ac.uk/pub/RWin"))

The new (in R 2.0.0) graphics pars "lend", "ljoin" and "lmitre" are
now implemented.

`Writing R Extensions' now documents how to interface a front-end
directly to R.dll, and there are some new convenience functions for
such front-ends.

R CMD / Rcmd now set HOME if unset, e.g. for use in Rcmd check.



R 2.0.1
=======

There is a new menu item to set a CRAN mirror.

Bug fixes
---------

jpeg(), png() and bmp() were not handling background colours properly.

It seems that on some systems (but not the maintainers') Mozilla 1.7.3
requires \ not / in filepaths, so help(topic, htmlhelp=TRUE) now uses
\.  (PR#7269)  Hopefully no system requires / not \ !

Changes to help() meant that help(topic, chmhelp=TRUE) was no longer
working if `topic' was an alias.  (PR#7269)

Recent changes caused (D)COM to sometimes go into infinite loops.

Any change in the GUI preferences via the dialog box changed font
(even if to the same font as before).  This is causing problems in MDI
mode with toolbars (PR#7277), where real font changes are not working
properly.

Control keys in Tcl/Tk windows were not handled properly; Tcl/Tk
interacted badly with Rgui in other ways as well.

R CMD SHLIB gave spurious error messages for inputs like all.f and all.c.

`make recommended' was not consulting the setting of WINHELP or HELP,
so failed if HHW was not installed.

We have increased the chances that installing a source package from
an explicit path with spaces in will work, so e.g.

    R CMD INSTALL "/Documents and Settings/myname/Source Files/mypkg"

will probably work -- it is still not recommended.  You can also
get away with backslashes here, but forward slashes are safer.

select.list(preselect=) was not working. (PR#7328)

The graphics recording mechanism windows(record = TRUE) could cause memory 
corruption.


    -------------------------------------------------------------------
